--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pokemon</title>
     <!-- <link rel="stylesheet" href="./style.css"> -->
     <style>
-                *,
+        *,
         *::after,
         *::before {
             box-sizing: border-box;
@@ -35,11 +35,11 @@
             linear-gradient(-90deg,var(--tertiary), transparent);
         }
 
-        .grid-layout:hover {
+        /* .grid-layout:hover {
             --primary: #96D4D0;
             --secondary: #52A3A9;
             --tertiary: #C26528;
-        }
+        } */
 
         .palette {
             display: grid;
